--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
   <div class="page-content">
     <div>
       <div class="profile-page">
-        <section id="#home">
+        <div class="section" id="home">
           <div class="wrapper">
             <div class="page-header page-header-small" filter-color="#d0cece">
               <div class="page-header-image" data-parallax="false" style="background-image: url(&quot;static/images/background.jpeg&quot;);"></div>
@@ -76,131 +76,127 @@
               </div>
             </div>
           </div>
-        </section>
+        </div>
 
         <!-- About -->
-        <section id="#about">
-          <div class="section" id="about">
-            <div class="container">
-              <div class="card aos-init aos-animate" data-aos="fade-up" data-aos-offset="10">
-                <div class="row">
+        <div class="section" id="about">
+          <div class="container">
+            <div class="card aos-init aos-animate" data-aos="fade-up" data-aos-offset="10">
+              <div class="row">
 
-                  <div class="col-lg-6 col-md-12">
-                    <div class="card-body">
-                      <div class="h4 mt-0 title">About</div>
-                      <p> Hi there, I'm Kevin! </p>
-                    </div>
+                <div class="col-lg-6 col-md-12">
+                  <div class="card-body">
+                    <div class="h4 mt-0 title">About</div>
+                    <p> Hi there, I'm Kevin! </p>
                   </div>
+                </div>
 
-                  <div class="col-lg-6 col-md-12">
-                    <div class="card-body">
-                      <div class="h4 mt-0 title">Basic Information</div>
+                <div class="col-lg-6 col-md-12">
+                  <div class="card-body">
+                    <div class="h4 mt-0 title">Basic Information</div>
 
-                      <div class="row">
-                        <div class="col-sm-4"><strong class="text-uppercase">City:</strong></div>
-                        <div class="col-sm-8">Torrance, CA</div>
-                      </div>
-
-                      <div class="row mt-3">
-                        <div class="col-sm-4"><strong class="text-uppercase">Email:</strong></div>
-                        <div class="col-sm-8"><a href="mailto:kevingil23@gmail.com">kevingil23@gmail.com</a></div>
-                      </div>
-
-                      <div class="row mt-3">
-                        <div class="col-sm-4"><strong class="text-uppercase">Degree:</strong></div>
-                        <div class="col-sm-8">Bachelor of Science (BS) - Accounting & Auditing</div>
-                      </div>
-
+                    <div class="row">
+                      <div class="col-sm-4"><strong class="text-uppercase">City:</strong></div>
+                      <div class="col-sm-8">Torrance, CA</div>
                     </div>
+
+                    <div class="row mt-3">
+                      <div class="col-sm-4"><strong class="text-uppercase">Email:</strong></div>
+                      <div class="col-sm-8"><a href="mailto:kevingil23@gmail.com">kevingil23@gmail.com</a></div>
+                    </div>
+
+                    <div class="row mt-3">
+                      <div class="col-sm-4"><strong class="text-uppercase">Degree:</strong></div>
+                      <div class="col-sm-8">Bachelor of Science (BS) - Accounting & Auditing</div>
+                    </div>
+
                   </div>
                 </div>
               </div>
             </div>
           </div>
-        </section>
+        </div>
 
         <!-- Projects -->
-        <section id="#projects">
-          <div class="section" id="experience">
-            <div class="container cc-experience">
-              <div class="h4 text-center mb-4 title"> Projects</div>
+        <div class="section" id="projects">
+          <div class="container cc-experience">
+            <div class="h4 text-center mb-4 title"> Projects</div>
 
-              <!-- Project 01 -->
-              <div class="card">
-                <div class="row">
-                  <div class="col-md-4 bg-primary aos-init aos-animate" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500" style="background-image: url(&#39;static/images/keras_tuner.png&#39;); background-size: cover; background-repeat: no-repeat center center-fixed; overflow: hidden">
-                    <div class="card-body"></div>
-                  </div>
-                  <div class="col-md-8 aos-init aos-animate" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
-                    <div class="card-body">
-                      <div class="h5">
-                        <a href="https://github.com/laurenemilyto/charity-funding-predictor" style="font-weight: 600">Charity Funding Predictor</a>
-                      </div>
-                      <div class="card-text">
-                        <p> Evaluating and optimizing a neural network to predict successful charity funding applications using Deep Learning and hyperparameter tuning. </p>
-                        <p><strong> Tools used</strong> &nbsp; : &nbsp; Python, Sklearn, Matplotlib, Neural Networks, Keras, Google Colab</p>
-                        <p><strong> Category</strong> &nbsp;: &nbsp; Data Science, Machine Learning, Deep Learning, Optimization</p>
-                        <p><strong> Year</strong> &nbsp; &nbsp; : &nbsp; Nov 2021</p>
-                      </div>
+            <!-- Project 01 -->
+            <div class="card">
+              <div class="row">
+                <div class="col-md-4 bg-primary aos-init aos-animate" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500" style="background-image: url(&#39;static/images/keras_tuner.png&#39;); background-size: cover; background-repeat: no-repeat center center-fixed; overflow: hidden">
+                  <div class="card-body"></div>
+                </div>
+                <div class="col-md-8 aos-init aos-animate" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
+                  <div class="card-body">
+                    <div class="h5">
+                      <a href="https://github.com/laurenemilyto/charity-funding-predictor" style="font-weight: 600">Charity Funding Predictor</a>
+                    </div>
+                    <div class="card-text">
+                      <p> Evaluating and optimizing a neural network to predict successful charity funding applications using Deep Learning and hyperparameter tuning. </p>
+                      <p><strong> Tools used</strong> &nbsp; : &nbsp; Python, Sklearn, Matplotlib, Neural Networks, Keras, Google Colab</p>
+                      <p><strong> Category</strong> &nbsp;: &nbsp; Data Science, Machine Learning, Deep Learning, Optimization</p>
+                      <p><strong> Year</strong> &nbsp; &nbsp; : &nbsp; Nov 2021</p>
                     </div>
                   </div>
                 </div>
               </div>
-
-              <!-- Spacer -->
-              <div class="card " style="margin-bottom: 20px; "></div>
-
-              <!-- Project 02 -->
-              <div class="card">
-                <div class="row">
-                  <div class="col-md-4 bg-primary aos-init aos-animate" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500" style="background-image: url(&#39;static/images/keras_tuner.png&#39;); background-size: cover; background-repeat: no-repeat center center-fixed; overflow: hidden">
-                    <div class="card-body"></div>
-                  </div>
-                  <div class="col-md-8 aos-init aos-animate" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
-                    <div class="card-body">
-                      <div class="h5">
-                        <a href="https://github.com/laurenemilyto/charity-funding-predictor" style="font-weight: 600">Charity Funding Predictor</a>
-                      </div>
-                      <div class="card-text">
-                        <p> Evaluating and optimizing a neural network to predict successful charity funding applications using Deep Learning and hyperparameter tuning. </p>
-                        <p><strong> Tools used</strong> &nbsp; : &nbsp; Python, Sklearn, Matplotlib, Neural Networks, Keras, Google Colab</p>
-                        <p><strong> Category</strong> &nbsp;: &nbsp; Data Science, Machine Learning, Deep Learning, Optimization</p>
-                        <p><strong> Year</strong> &nbsp; &nbsp; : &nbsp; Nov 2021</p>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-
-              <!-- Spacer -->
-              <div class="card " style="margin-bottom: 20px; "></div>
-
-
-              <!-- Project 03 -->
-              <div class="card">
-                <div class="row">
-                  <div class="col-md-4 bg-primary aos-init aos-animate" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500" style="background-image: url(&#39;static/images/keras_tuner.png&#39;); background-size: cover; background-repeat: no-repeat center center-fixed; overflow: hidden">
-                    <div class="card-body"></div>
-                  </div>
-                  <div class="col-md-8 aos-init aos-animate" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
-                    <div class="card-body">
-                      <div class="h5">
-                        <a href="https://github.com/laurenemilyto/charity-funding-predictor" style="font-weight: 600">Charity Funding Predictor</a>
-                      </div>
-                      <div class="card-text">
-                        <p> Evaluating and optimizing a neural network to predict successful charity funding applications using Deep Learning and hyperparameter tuning. </p>
-                        <p><strong> Tools used</strong> &nbsp; : &nbsp; Python, Sklearn, Matplotlib, Neural Networks, Keras, Google Colab</p>
-                        <p><strong> Category</strong> &nbsp;: &nbsp; Data Science, Machine Learning, Deep Learning, Optimization</p>
-                        <p><strong> Year</strong> &nbsp; &nbsp; : &nbsp; Nov 2021</p>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-
             </div>
+
+            <!-- Spacer -->
+            <div class="card " style="margin-bottom: 20px; "></div>
+
+            <!-- Project 02 -->
+            <div class="card">
+              <div class="row">
+                <div class="col-md-4 bg-primary aos-init aos-animate" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500" style="background-image: url(&#39;static/images/keras_tuner.png&#39;); background-size: cover; background-repeat: no-repeat center center-fixed; overflow: hidden">
+                  <div class="card-body"></div>
+                </div>
+                <div class="col-md-8 aos-init aos-animate" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
+                  <div class="card-body">
+                    <div class="h5">
+                      <a href="https://github.com/laurenemilyto/charity-funding-predictor" style="font-weight: 600">Charity Funding Predictor</a>
+                    </div>
+                    <div class="card-text">
+                      <p> Evaluating and optimizing a neural network to predict successful charity funding applications using Deep Learning and hyperparameter tuning. </p>
+                      <p><strong> Tools used</strong> &nbsp; : &nbsp; Python, Sklearn, Matplotlib, Neural Networks, Keras, Google Colab</p>
+                      <p><strong> Category</strong> &nbsp;: &nbsp; Data Science, Machine Learning, Deep Learning, Optimization</p>
+                      <p><strong> Year</strong> &nbsp; &nbsp; : &nbsp; Nov 2021</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <!-- Spacer -->
+            <div class="card " style="margin-bottom: 20px; "></div>
+
+
+            <!-- Project 03 -->
+            <div class="card">
+              <div class="row">
+                <div class="col-md-4 bg-primary aos-init aos-animate" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500" style="background-image: url(&#39;static/images/keras_tuner.png&#39;); background-size: cover; background-repeat: no-repeat center center-fixed; overflow: hidden">
+                  <div class="card-body"></div>
+                </div>
+                <div class="col-md-8 aos-init aos-animate" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
+                  <div class="card-body">
+                    <div class="h5">
+                      <a href="https://github.com/laurenemilyto/charity-funding-predictor" style="font-weight: 600">Charity Funding Predictor</a>
+                    </div>
+                    <div class="card-text">
+                      <p> Evaluating and optimizing a neural network to predict successful charity funding applications using Deep Learning and hyperparameter tuning. </p>
+                      <p><strong> Tools used</strong> &nbsp; : &nbsp; Python, Sklearn, Matplotlib, Neural Networks, Keras, Google Colab</p>
+                      <p><strong> Category</strong> &nbsp;: &nbsp; Data Science, Machine Learning, Deep Learning, Optimization</p>
+                      <p><strong> Year</strong> &nbsp; &nbsp; : &nbsp; Nov 2021</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+
           </div>
-        </section>
+        </div>
 
       </div>
     </div>
