--- a/index.html
+++ b/index.html
@@ -61,21 +61,32 @@
     <div>
       <div class="profile-page">
 
-        <!-- Banner -->
-        <div class="static-slider3">
-          <div class="container">
-            <!-- Row  -->
-            <div class="row">
-              <!-- Column -->
-              <div class="col-md-12 align-self-center text-center">
-                <link href="https://fonts.googleapis.com/css?family=Raleway:200,100,400" rel="stylesheet" type="text/css" />
-                <h1>Hi there, I'm Kevin.</h1>
-                <br><br>
-                <h1 class="title">I am a<span class="typewrite" data-period="2000" data-type='[ " Financial Analyst.", "n Accountant.", "  data geek.", "n automation nerd." ]'></span></h2>
+        <!-- Wrapper -->
+        <div class=”wrapper”>
+
+          <div class=”page-header clear-filter”>
+            <div class=”rellax-header rellax-header-sky” data-rellax-speed=”-8">
+              <div class=”page-header-image” style="background-image: url(&quot;static/images/background.jpeg&quot;); transform: translate3d(0px, 464.333px, 0px);"></div>
+
+                <!-- Banner -->
+                <div class="static-slider3">
+                  <div class="container">
+                    <div class="row">
+                      <div class="col-md-12 align-self-center text-center">
+                        <link href="https://fonts.googleapis.com/css?family=Raleway:200,100,400" rel="stylesheet" type="text/css" />
+                        <h1>Hi there, I'm Kevin.</h1>
+                        <br><br>
+                        <h1 class="title">I am a<span class="typewrite" data-period="2000" data-type='[ " Financial Analyst.", "n Accountant.", "  data geek.", "n automation nerd." ]'></span></h2>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+
               </div>
             </div>
+        
+            <!-- End of wrapper -->
           </div>
-        </div>
 
         <!-- End of profile-page -->
       </div>
