--- a/index.html
+++ b/index.html
@@ -66,11 +66,11 @@
 
           <div class="page-header page-header-small" filter-color="#d0cece">
             <!-- <div class=”rellax-header rellax-header-sky" data-rellax-speed=”-8"> -->
-            <div class=”banner” style="background-image: url(&quot;static/images/background.jpeg&quot;); transform: translate3d(0px, 464.333px, 0px);"></div>
+            <div class="page-header-image" style="background-image: url(&quot;static/images/background.jpeg&quot;); transform: translate3d(0px, 464.333px, 0px);"></div>
 
             <div class="container">
             
-              <!-- Banner -->
+              <!-- Banner 
               <div class="static-slider3">
                 <div class="container">
                   <div class="row justify-content-center">
@@ -82,7 +82,7 @@
                     </div>
                   </div>
                 </div>
-              </div>
+              </div> -->
 
               <!-- End of container -->
             </div>
