--- a/index.html
+++ b/index.html
@@ -64,10 +64,12 @@
         <!-- Wrapper -->
         <div class=”wrapper”>
 
-          <div class="page-header page-header-small" filter-color="#d0cece">
-            <!-- <div class=”rellax-header rellax-header-sky" data-rellax-speed=”-8"> -->
-            <div class="page-header-image" style="background-image: url(&quot;static/images/background.jpeg&quot;); transform: translate3d(0px, 464.333px, 0px);"></div>
-
+          <div class="page-header" filter-color="#d0cece">
+            <div class=”rellax-header rellax-header-sky” data-rellax-speed=”-8">
+              <div class="page-header-image" style="background-image: url(&quot;static/images/background.jpeg&quot;); transform: translate3d(0px, 464.333px, 0px);"></div>
+            </div>
+            
+            <!-- Container -->
             <div class="container">
             
               <!-- Banner -->
@@ -84,7 +86,6 @@
                 </div>
               </div>
 
-              <!-- End of container -->
             </div>
 
           </div>
