--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
           <div class="row justify-content-center">
             <div class="col-4 align-self-center text-center">
               <link href="https://fonts.googleapis.com/css?family=Raleway:200,100,400" rel="stylesheet" type="text/css" />
-              <h1>Hi there, I'm Kevin.</h1>
+              <h1>Hi there, I'm <b>Kevin</b>.</h1>
               <br><br>
               <h1 class="title">I am a<span class="typewrite" data-period="2000" data-type='[ "  data geek.", "n automation nerd." ]'></span></h2>
             </div>
