--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   <script src="./static/js/main.js" defer></script>
   
   <!-- Favicon -->
-  <link rel="icon" href="https://www.freefavicon.com/freefavicons/objects/dice-152-92041.png">
+  <link rel="icon" href="https://www.kindpng.com/picc/m/145-1458321_pinky-spike-brawl-stars-png-download-spike-brawl.png">
 
   <!-- Google Tag Manager -->
   <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
