--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
   
 
-  <div style="position: relative; height: 750px; width: 100%">
+  <div style="position: relative; height: 70%; width: 100%">
     <div class="hero-image" style="position: absolute; top:0; right: 0; left: 0; bottom: 0; width: 100%; height: 100%; object-fit: cover;">
 
       <!-- Banner -->
