--- a/index.html
+++ b/index.html
@@ -55,28 +55,22 @@
   height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <!-- End Google Tag Manager (noscript) -->
 
-  
-
-  <div style="position: relative; height: 70%; width: 100%">
-    <div class="hero-image" style="position: absolute; top:0; right: 0; left: 0; bottom: 0; width: 100%; height: 100%; object-fit: cover;">
-
-      <!-- Banner -->
-      <div class="container">
-        <div class="static-slider3">
-          <div class="container">
-            <div class="row justify-content-center">
-              <div class="align-self-center text-center">
-                <link href="https://fonts.googleapis.com/css?family=Raleway:200,100,400" rel="stylesheet" type="text/css"/>
-                <br><br>
-                <h1>Hi there, I'm <b>Kevin</b>.</h1>
-                <br><br>
-                <h1 class="title">I am a<span class="typewrite" data-period="2000" data-type='[ "  data geek.", "n automation nerd." ]'></span></h2>
-              </div>
+  <!-- Banner -->
+  <div class="hero-image">
+    <div class="container">
+      <div class="static-slider3">
+        <div class="container">
+          <div class="row justify-content-center">
+            <div class="align-self-center text-center">
+              <link href="https://fonts.googleapis.com/css?family=Raleway:200,100,400" rel="stylesheet" type="text/css"/>
+              <br><br>
+              <h1>Hi there, I'm <b>Kevin</b>.</h1>
+              <br><br>
+              <h1 class="title">I am a<span class="typewrite" data-period="2000" data-type='[ "  data geek.", "n automation nerd." ]'></span></h2>
             </div>
           </div>
         </div>
       </div>
-
     </div>
   </div>
 
