--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
   <div class="hero-image">
     <div class="container">
       <div class="static-slider3">
-        <div class="row">
-          <div class="align-self-center text-center">
+        <div class="row justify-content-center">
+          <div class="col-4 align-self-center text-center">
             <link href="https://fonts.googleapis.com/css?family=Raleway:200,100,400" rel="stylesheet" type="text/css"/>
             <h1>Hi there, I'm <b>Kevin</b>.</h1>
             <br><br>
