--- a/index.html
+++ b/index.html
@@ -62,9 +62,9 @@
         <div class="row justify-content-center">
           <div class="col-4 align-self-center text-center">
             <link href="https://fonts.googleapis.com/css?family=Raleway:200,100,400" rel="stylesheet" type="text/css"/>
-            <h1>Hi there, I'm <b>Kevin</b>.</h1>
+            <h1 class="h1title">Hi there, I'm <b>Kevin</b>.</h1>
             <br><br>
-            <h1 class="title">I am a<span class="typewrite" data-period="2000" data-type='[ "  data geek.", "n automation nerd." ]'></span></h2>
+            <h2 class="h2title">I am a<span class="typewrite" data-period="2000" data-type='[ "  data geek.", "n automation nerd." ]'></span></h2>
           </div>
         </div>
       </div>
