--- a/index.html
+++ b/index.html
@@ -60,11 +60,11 @@
     <div class="container">
       <div class="static-slider3">
         <div class="row justify-content-center">
-          <div class="col-4">
+          <div class="col-4 align-self-center text-center">
             <link href="https://fonts.googleapis.com/css?family=Raleway:200,100,400" rel="stylesheet" type="text/css"/>
-            <h1 class="h1title">Hi there, I'm <b>Kevin</b>.</h1>
+            <h1>Hi there, I'm <b>Kevin</b>.</h1>
             <br><br>
-            <h2 class="h2title">I am a<span class="typewrite" data-period="2000" data-type='[ "  data geek.", "n automation nerd." ]'></span></h2>
+            <h1 class="h2title">I am a<span class="typewrite" data-period="2000" data-type='[ "  data geek.", "n automation nerd." ]'></span></h1>
           </div>
         </div>
       </div>
