--- a/index.html
+++ b/index.html
@@ -58,13 +58,15 @@
   <!-- Banner -->
   <div class="hero-image">
     <div class="container">
-      <div class="static-slider3">
-        <div class="row justify-content-center">
-          <div class="col-1 justify-content-center">
-            <link href="https://fonts.googleapis.com/css?family=Raleway:200,100,400" rel="stylesheet" type="text/css"/>
-            <h1>Hi there, I'm <b>Kevin</b>.</h1>
-            <br><br>
-            <h1 class="title">I am a<span class="typewrite" data-period="2000" data-type='[ "  data geek.", "n automation nerd." ]'></span></h1>
+      <div class="content-center">
+        <div class="static-slider3">
+          <div class="row justify-content-center">
+            <div class="col justify-content-center">
+              <link href="https://fonts.googleapis.com/css?family=Raleway:200,100,400" rel="stylesheet" type="text/css"/>
+              <h1>Hi there, I'm <b>Kevin</b>.</h1>
+              <br><br>
+              <h1 class="title">I am a<span class="typewrite" data-period="2000" data-type='[ "  data geek.", "n automation nerd." ]'></span></h1>
+            </div>
           </div>
         </div>
       </div>
