--- a/index.html
+++ b/index.html
@@ -72,17 +72,41 @@
       </div>
     </div>
   </div>
+  <!-- End Banner -->
 
-  <!-- Button Container -->
-  <div class="section">
-    <div class="container">
-      <div class="button-container">
-        <a class="btn btn-default btn-round btn-lg btn-icon" href="https://www.linkedin.com/in/lauren-to/" rel="tooltip" title="" data-original-title="Connect on LinkedIn"><svg class="svg-inline--fa fa-linkedin-in fa-w-14 fa-3x" style="padding-top: 20%;" aria-hidden="true" focusable="false" data-prefix="fab" data-icon="linkedin-in" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" data-fa-i2svg=""><path fill="currentColor" d="M100.28 448H7.4V148.9h92.88zM53.79 108.1C24.09 108.1 0 83.5 0 53.8a53.79 53.79 0 0 1 107.58 0c0 29.7-24.1 54.3-53.79 54.3zM447.9 448h-92.68V302.4c0-34.7-.7-79.2-48.29-79.2-48.29 0-55.69 37.7-55.69 76.7V448h-92.78V148.9h89.08v40.8h1.3c12.4-23.5 42.69-48.3 87.88-48.3 94 0 111.28 61.9 111.28 142.3V448z"></path></svg><!-- <i class="fab fa-linkedin-in fa-3x" style="padding-top: 20%;"></i> --></a>
-        <a class="btn btn-default btn-round btn-lg btn-icon" href="https://twitter.com/laurenemilyto" rel="tooltip" title="" data-original-title="Connect on Twitter"><svg class="svg-inline--fa fa-twitter fa-w-16 fa-3x" style="padding-top: 20%;" aria-hidden="true" focusable="false" data-prefix="fab" data-icon="twitter" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" data-fa-i2svg=""><path fill="currentColor" d="M459.37 151.716c.325 4.548.325 9.097.325 13.645 0 138.72-105.583 298.558-298.558 298.558-59.452 0-114.68-17.219-161.137-47.106 8.447.974 16.568 1.299 25.34 1.299 49.055 0 94.213-16.568 130.274-44.832-46.132-.975-84.792-31.188-98.112-72.772 6.498.974 12.995 1.624 19.818 1.624 9.421 0 18.843-1.3 27.614-3.573-48.081-9.747-84.143-51.98-84.143-102.985v-1.299c13.969 7.797 30.214 12.67 47.431 13.319-28.264-18.843-46.781-51.005-46.781-87.391 0-19.492 5.197-37.36 14.294-52.954 51.655 63.675 129.3 105.258 216.365 109.807-1.624-7.797-2.599-15.918-2.599-24.04 0-57.828 46.782-104.934 104.934-104.934 30.213 0 57.502 12.67 76.67 33.137 23.715-4.548 46.456-13.32 66.599-25.34-7.798 24.366-24.366 44.833-46.132 57.827 21.117-2.273 41.584-8.122 60.426-16.243-14.292 20.791-32.161 39.308-52.628 54.253z"></path></svg><!-- <i class="fab fa-twitter fa-3x" style="padding-top: 20%;"></i> --></a>
-        <a class="btn btn-default btn-round btn-lg btn-icon" href="https://github.com/laurenemilyto" rel="tooltip" title="" data-original-title="Check my work!"><svg class="svg-inline--fa fa-github fa-w-16 fa-3x" style="padding-top: 20%;" aria-hidden="true" focusable="false" data-prefix="fab" data-icon="github" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 496 512" data-fa-i2svg=""><path fill="currentColor" d="M165.9 397.4c0 2-2.3 3.6-5.2 3.6-3.3.3-5.6-1.3-5.6-3.6 0-2 2.3-3.6 5.2-3.6 3-.3 5.6 1.3 5.6 3.6zm-31.1-4.5c-.7 2 1.3 4.3 4.3 4.9 2.6 1 5.6 0 6.2-2s-1.3-4.3-4.3-5.2c-2.6-.7-5.5.3-6.2 2.3zm44.2-1.7c-2.9.7-4.9 2.6-4.6 4.9.3 2 2.9 3.3 5.9 2.6 2.9-.7 4.9-2.6 4.6-4.6-.3-1.9-3-3.2-5.9-2.9zM244.8 8C106.1 8 0 113.3 0 252c0 110.9 69.8 205.8 169.5 239.2 12.8 2.3 17.3-5.6 17.3-12.1 0-6.2-.3-40.4-.3-61.4 0 0-70 15-84.7-29.8 0 0-11.4-29.1-27.8-36.6 0 0-22.9-15.7 1.6-15.4 0 0 24.9 2 38.6 25.8 21.9 38.6 58.6 27.5 72.9 20.9 2.3-16 8.8-27.1 16-33.7-55.9-6.2-112.3-14.3-112.3-110.5 0-27.5 7.6-41.3 23.6-58.9-2.6-6.5-11.1-33.3 2.6-67.9 20.9-6.5 69 27 69 27 20-5.6 41.5-8.5 62.8-8.5s42.8 2.9 62.8 8.5c0 0 48.1-33.6 69-27 13.7 34.7 5.2 61.4 2.6 67.9 16 17.7 25.8 31.5 25.8 58.9 0 96.5-58.9 104.2-114.8 110.5 9.2 7.9 17 22.9 17 46.4 0 33.7-.3 75.4-.3 83.6 0 6.5 4.6 14.4 17.3 12.1C428.2 457.8 496 362.9 496 252 496 113.3 383.5 8 244.8 8zM97.2 352.9c-1.3 1-1 3.3.7 5.2 1.6 1.6 3.9 2.3 5.2 1 1.3-1 1-3.3-.7-5.2-1.6-1.6-3.9-2.3-5.2-1zm-10.8-8.1c-.7 1.3.3 2.9 2.3 3.9 1.6 1 3.6.7 4.3-.7.7-1.3-.3-2.9-2.3-3.9-2-.6-3.6-.3-4.3.7zm32.4 35.6c-1.6 1.3-1 4.3 1.3 6.2 2.3 2.3 5.2 2.6 6.5 1 1.3-1.3.7-4.3-1.3-6.2-2.2-2.3-5.2-2.6-6.5-1zm-11.4-14.7c-1.6 1-1.6 3.6 0 5.9 1.6 2.3 4.3 3.3 5.6 2.3 1.6-1.3 1.6-3.9 0-6.2-1.4-2.3-4-3.3-5.6-2z"></path></svg><!-- <i class="fab fa-github fa-3x" style="padding-top: 20%;"></i> --></a>
-      </div>
-    </div>
+
+  <!-- About Me -->
+  <div>
+    <h2>ABOUT ME</h2>
+    <p>Highly motivated front-end developer with international client portfolio. I started to learn programming on my own at age 11, from an old book and with no computer. Driven and permanently curious, I am now specialized in fixing front-end issues that other technology providers can't manage.</p>
   </div>
+  <!-- End About Me -->
+
+
+  <!-- Contact -->
+  <div class="contact module me-turquoise" id="contact">
+    <p class="contact-supratitle me-text-shadow-sm me-text-center me-white-text">LET'S MAKE SOMETHING AWESOME TOGETHER. GET IN</p>
+    <h2 class="me-white-text me-text-shadow-sm">CONTACT</h2>
+    <div class="speechBubble me-white-bg" id="speechBubble" style="transform: scale(0);">
+      <span><strong>I am</strong> <br>the droid <b>you</b><br> are looking <br>for!</span>
+    </div>
+    <p class="name-and-mail me-white-text me-text-center"><span><b>Botond</b> RADULY</span><br>raduly.botond@gmail.com</p>
+    <div class="social-icons me-text-center">
+      <a href="https://www.facebook.com/radulyb" target="_blank" class="me-transparent-btn facebook"><svg version="1.1" id="facebook" xmlns="https://www.w3.org/2000/svg" xmlns:xlink="https://www.w3.org/1999/xlink" x="0px" y="0px" width="50px" height="50px" viewBox="0 0 512 512" enable-background="new 0 0 512 512" xml:space="preserve">
+        <path id="facebook-icon" d="M204.067,184.692h-43.144v70.426h43.144V462h82.965V254.238h57.882l6.162-69.546h-64.045c0,0,0-25.97,0-39.615c0-16.398,3.303-22.89,19.147-22.89c12.767,0,44.896,0,44.896,0V50c0,0-47.326,0-57.441,0c-61.734,0-89.567,27.179-89.567,79.231C204.067,174.566,204.067,184.692,204.067,184.692z"></path></svg>
+      </a>
+      <a href="https://ro.linkedin.com/in/botondraduly" target="_blank" class="me-transparent-btn linkedin"><svg version="1.1" id="linkedin" xmlns="https://www.w3.org/2000/svg" xmlns:xlink="https://www.w3.org/1999/xlink" x="0px" y="0px" width="50px" height="50px" viewBox="0 0 512 512" enable-background="new 0 0 512 512" xml:space="preserve">
+        <path id="linkedin-icon" d="M150.65,100.682c0,27.992-22.508,50.683-50.273,50.683s-50.273-22.691-50.273-50.683
+        C50.104,72.691,72.612,50,100.377,50C128.143,50,150.65,72.691,150.65,100.682z M143.294,187.333H58.277V462h85.017V187.333z
+        M279.195,187.333h-81.542V462h81.542c0,0,0-101.877,0-144.182c0-38.623,17.779-61.614,51.807-61.614
+        c31.268,0,46.289,22.071,46.289,61.614c0,39.546,0,144.182,0,144.182h84.605c0,0,0-100.344,0-173.915
+        c0-73.571-41.689-109.131-99.935-109.131s-82.769,45.369-82.769,45.369v-36.99H279.195z"></path></svg>
+      </a>
+    </div>
+    <img data-src="images/me/me-storm.png" src="./Botond Raduly_files/me-storm.png" id="stormtrooper" alt="Botond Raduly Stormtrooper" style="left: -449px;">
+  </div>
+  <!-- End Contact -->
+
 
 </body>
 
