--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
   <!-- About Me -->
   <div class="about-module me-accelerate module me-white-bg" id="about-me">
     <h2>ABOUT ME</h2>
-    <p>Highly motivated front-end developer with international client portfolio. I started to learn programming on my own at age 11, from an old book and with no computer. Driven and permanently curious, I am now specialized in fixing front-end issues that other technology providers can't manage.</p>
+    <p>About me section</p>
   </div>
   <!-- End About Me -->
 
@@ -93,7 +93,7 @@
       <a href="https://www.facebook.com/kevingil23" target="_blank" class="me-transparent-btn facebook"><svg version="1.1" id="facebook" xmlns="https://www.w3.org/2000/svg" xmlns:xlink="https://www.w3.org/1999/xlink" x="0px" y="0px" width="50px" height="50px" viewBox="0 0 512 512" enable-background="new 0 0 512 512" xml:space="preserve">
         <path id="github-icon" d="M204.067,184.692h-43.144v70.426h43.144V462h82.965V254.238h57.882l6.162-69.546h-64.045c0,0,0-25.97,0-39.615c0-16.398,3.303-22.89,19.147-22.89c12.767,0,44.896,0,44.896,0V50c0,0-47.326,0-57.441,0c-61.734,0-89.567,27.179-89.567,79.231C204.067,174.566,204.067,184.692,204.067,184.692z"></path></svg>
       </a>
-      <a href="https://ro.linkedin.com/in/kevingil23" target="_blank" class="me-transparent-btn linkedin"><svg version="1.1" id="linkedin" xmlns="https://www.w3.org/2000/svg" xmlns:xlink="https://www.w3.org/1999/xlink" x="0px" y="0px" width="50px" height="50px" viewBox="0 0 512 512" enable-background="new 0 0 512 512" xml:space="preserve">
+      <a href="https://linkedin.com/in/kevingil23" target="_blank" class="me-transparent-btn linkedin"><svg version="1.1" id="linkedin" xmlns="https://www.w3.org/2000/svg" xmlns:xlink="https://www.w3.org/1999/xlink" x="0px" y="0px" width="50px" height="50px" viewBox="0 0 512 512" enable-background="new 0 0 512 512" xml:space="preserve">
         <path id="linkedin-icon" d="M150.65,100.682c0,27.992-22.508,50.683-50.273,50.683s-50.273-22.691-50.273-50.683
         C50.104,72.691,72.612,50,100.377,50C128.143,50,150.65,72.691,150.65,100.682z M143.294,187.333H58.277V462h85.017V187.333z
         M279.195,187.333h-81.542V462h81.542c0,0,0-101.877,0-144.182c0-38.623,17.779-61.614,51.807-61.614
